...
      <HamburgerMenu
        pageType="user"
        onProfilePress={handleProfilePress}
      />
      <View style={styles.container}>
        <View style={styles.header}>
          <Text testID="workout-list-title" style={styles.pageTitle}>Manage Workouts</Text>

        </View>

        {!loading && (
          <TouchableOpacity testID="workout-list-add-btn" style={styles.addButton} onPress={() => router.push('/workouts/add')}>
            <Text style={styles.addBtnText}>+ Add New Routine</Text>
          </TouchableOpacity>
        )}

        {loading ? (
          <ActivityIndicator size="large" color="#4A60E6" style={{ marginTop: 50 }} />
...
